Fixed campaign page overflow problem

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -544,7 +544,7 @@ div.donate-section{
 	z-index: 5;
 }
 div.donate-underspace{
-	width: 100vw;
+	width: 100%;
 	height: 72px;
 }
 div.donate-section > div{
